# diffusion-models-basics

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  mypy.ini  pyproject.toml  train.ipynb
app/: main.py  train.ipynb
app/model/: __init__.py
main/: train.ipynb  visualize.ipynb
main/src/: data.py  ddpm.py  model.py  utils.py
