[tool.poetry]
name = "diffusion-models-basics"
version = "0.1.0"
description = ""
authors = ["Gleb Nikiforov"]
readme = "README.md"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.1"
torchvision = "^0.16.1"
numpy = "^1.26.2"
matplotlib = "^3.8.1"
jupyter = "^1.0.0"
tqdm = "^4.66.1"


[tool.poetry.group.dev.dependencies]
bandit = "^1.7.5"
black = "^23.1.0"
flake8 = "^6.0.0"
flake8-bandit = "^4.1.1"
flake8-black = "^0.3.6"
flake8-bugbear = "^23.3.12"
flake8-import-order = "^0.18.2"
flake8-polyfill = "^1.0.2"
mypy = "^1.1.1"
mypy-extensions = "^1.0.0"
pylint = "^2.17.1"
pre-commit = "^3.2.0"
ruff = "^0.0.259"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
select = ["E", "F", "B", "N", "S", "ICN"]
ignore = ["S101"]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".idea",
    ".DS_Store"
]
# Same as Black.
line-length = 120

[tool.ruff.per-file-ignores]
"manager.py" = ["N815"]

[tool.black]
skip-string-normalization = true
line_length = 120
